# truthdecay-soc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  prereg.md  pyproject.toml  requirements.txt  run_grid.py
.github/workflows/: tests.yml
agent/: agent.py  clients.py  memory.py  prompt.py  rag.py  tools.py
cases/: c2_01_probe.json  c2_01_seed.json  c3_01_probe.json  c3_01_seed.json  d1_01_probe.json  d1_01_seed.json  d1_02_probe.json  d1_02_seed.json  i1_01_probe.json  i1_01_seed.json  loader.py  p1_01_probe.json  p1_01_seed.json  p2_01_probe.json  p2_01_seed.json  s1_01_probe.json  s1_01_seed.json  v1_01_probe.json  v1_01_seed.json  validate.py
cases/campaigns/: t1_01.json  t2_01.json
core/: decisions.py  markers.py  types.py
dashboard/: render_static.py
docs/: DEMO.md  GEMINI.md  RESULTS.md
experiments/: accumulation.py  conditions.py  run.py  run_campaign.py
firewall/: policy.py
results/d1_02_neutral/: dashboard_d1_02.html  manifest_gemini_gemini-2.5-flash-lite.json  results_gemini_gemini-2.5-flash-lite.csv  summary_gemini_gemini-2.5-flash-lite.csv  traces_gemini_gemini-2.5-flash-lite.jsonl
results/d1_aware/: dashboard_d1_01.html  manifest_gemini_gemini-2.5-flash-lite.json  results_gemini_gemini-2.5-flash-lite.csv  summary_gemini_gemini-2.5-flash-lite.csv  (+1 more)
scorer/: bootstrap.py  causal.py  ledger.py  metrics.py
scripts/: verify_gemini_offline.py
tests/: test_accumulation.py  test_cases_valid.py  test_causal.py  test_integration_mock.py  test_llm_seam.py  test_redaction.py  test_run_grid.py  test_scorer_golden.py
(+42 files in other folders)
